# Visual-Novell-game-and-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VisualNovelEngine.cpp  VisualNovelEngine.h  engine.c  main.cpp  mainwindow.cpp  mainwindow.h  newprojectdialog.cpp  newprojectdialog.h  settingsdialog.cpp  settingsdialog.h  startupdialog.cpp  startupdialog.h
libs/custom/saves/: CMakeLists.txt  saves.cfg  saves.cpp  saves.h
libs/standard/opengl/: opengl.cfg  opengl.cpp  opengl.h
libs/standard/physx/: physx.cpp  physx.h
libs/standard/vulkan/: vulkan.cfg  vulkan.cpp  vulkan.h
